--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-simple-maps": "^3.0.0",
     "react-three-fiber": "^6.0.13",
+    "react-tilt": "^1.0.2",
     "styled-components": "^6.0.7",
     "three": "^0.155.0",
     "typed.js": "^2.0.16"
